--- a/page Contact.html
+++ b/page Contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../Images/icon.png" type="image/x-icon">
     <title>Contact</title>
-    <link rel="stylesheet" href="../eval 2/Page Contact.css ">
+    <link rel="stylesheet" href="../EVAL-HTML-CSS-KAT-MATT-PAUL/Page Contact.css ">
    
 </head>
 <body>
