--- a/page Contact.html
+++ b/page Contact.html
@@ -22,11 +22,11 @@
 <div>
     <nav>
         <ul>
-            <li><a href="../HTML/Page HTML.html"><button><img class="accnavimg" src="../eval 2/Images/Logo_HTML.jpg"></button></a></li>   
-            <li><a href="../HTML/page CSS.HTML"><button><img class="accnavimg" src="../eval 2/Images/Logo_CSS.jpg"></button></a></li>   
-            <li><a href="../HTML/page Java Script.html"><button><img class="accnavimg" src="../eval 2/Images/Logo_JS.png"></button></a></li>   
-            <li><a href="../HTML/"><button><img class="accnavimg" src="../eval 2/Images/Logo_API.jpg"></button></a></li>   
-            <li><a href="../HTML/page Contact.html"><button><img class="accnavimg" src="../eval 2/Images/10.jpg"></button></a></li>  
+            <li><a href="../HTML/Page HTML.html"><button><img class="accnavimg" src="../EVAL-HTML-CSS-KAT-MATT-PAUL/images/Logo_HTML.jpg"></button></a></li>   
+            <li><a href="../HTML/page CSS.HTML"><button><img class="accnavimg" src="../EVAL-HTML-CSS-KAT-MATT-PAUL/images/Logo_CSS.jpg"></button></a></li>   
+            <li><a href="../HTML/page Java Script.html"><button><img class="accnavimg" src="../EVAL-HTML-CSS-KAT-MATT-PAUL/images/Logo_JS.png"></button></a></li>   
+            <li><a href="../HTML/"><button><img class="accnavimg" src="../EVAL-HTML-CSS-KAT-MATT-PAUL/images/Logo_API.jpg"></button></a></li>   
+            <li><a href="../HTML/page Contact.html"><button><img class="accnavimg" src="../EVAL-HTML-CSS-KAT-MATT-PAUL/images/10.jpg"></button></a></li>  
            
         </ul>
     </nav>
