--- a/HTML/page Java Script.html
+++ b/HTML/page Java Script.html
@@ -14,11 +14,11 @@
     <div>
         <nav>
             <ul>
-                <li><a href="../HTML/Page HTML.html"><button><img src="../Images/Logo_HTML.jpg"></button></a></li>   
-                <li><a href="../HTML/page CSS.HTML"><button><img src="../Images/Logo_CSS.jpg"></button></a></li>   
-                <li><a href="../HTML/page API.html"><button><img src="../Images/logo_API2.png"></button></a></li>   
-                <li><a href="../HTML/page_accueil.html"><button><img src="../Images/logoHome.png"></button></a></li>
-                <li><a href="../HTML/page Contact.html"><button><img src="../Images/logo_contact.png"></button></a></li>   
+                <li><a href="../HTML/Page HTML.html"><button><img class="accnavimg" src="../Images/Logo_HTML.jpg"></button></a></li>   
+                <li><a href="../HTML/page CSS.HTML"><button><img class="accnavimg" src="../Images/Logo_CSS.jpg"></button></a></li>   
+                <li><a href="../HTML/page API.html"><button><img class="accnavimg" src="../Images/logo_API2.png"></button></a></li>   
+                <li><a href="../HTML/page_accueil.html"><button><img class="accnavimg" src="../Images/logoHome.png"></button></a></li>
+                <li><a href="../HTML/page Contact.html"><button><img class="accnavimg" src="../Images/logo_contact.png"></button></a></li>   
             </ul>
         </nav>
     </div>
@@ -75,5 +75,6 @@
             </div>
 
 </body>
+<footer><a class="footertext" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/">Mention Legales</a></footer>
 </html>
 
