--- a/HTML/page API.html
+++ b/HTML/page API.html
@@ -17,11 +17,11 @@
         <nav>
             <ul>
 
-                <li><a href="../HTML/Page HTML.html"><button><img src="../Images/Logo_HTML.jpg"></button></a></li>   
-                <li><a href="../HTML/page Java Script.html"><button><img src="../Images/Logo_JS.png"></button></a></li>   
-                <li><a href="../HTML/page CSS.HTML"><button><img src="../Images/Logo_CSS.jpg"></button></a></li>
-                <li><a href="../HTML/page_accueil.html"><button><img src="../Images/logoHome.png"></button></a></li>  
-                <li><a href="../HTML/page Contact.html"><button><img src="../Images/logo_contact.png"></button></a></li>  
+                <li><a href="../HTML/Page HTML.html"><button><img class="accnavimg" src="../Images/Logo_HTML.jpg"></button></a></li>   
+                <li><a href="../HTML/page Java Script.html"><button><img class="accnavimg" src="../Images/Logo_JS.png"></button></a></li>   
+                <li><a href="../HTML/page CSS.HTML"><button><img class="accnavimg" src="../Images/Logo_CSS.jpg"></button></a></li>
+                <li><a href="../HTML/page_accueil.html"><button><img class="accnavimg" src="../Images/logoHome.png"></button></a></li>  
+                <li><a href="../HTML/page Contact.html"><button><img class="accnavimg" src="../Images/logo_contact.png"></button></a></li>  
             </ul>
         </nav>
     </div>
@@ -85,6 +85,7 @@
 
 
 </body>
+<footer><a class="footertext" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/">Mention Legales</a></footer>
 </html>
 
 
