--- a/HTML/page Contact.html
+++ b/HTML/page Contact.html
@@ -22,11 +22,12 @@
 <div>
     <nav>
         <ul>
-            <li><a href="../HTML/Page HTML.html"><button><img class="accnavimg" src="../Images/Logo_HTML.jpg"></button></a></li>   
-            <li><a href="../HTML/page CSS.HTML"><button><img class="accnavimg" src="../Images/Logo_CSS.jpg"></button></a></li>   
+            <li><a href="../HTML/page_accueil.html"><button><img class="accnavimg" src="../Images/logoHome.png"></button></a></li>
+            <li><a href="../HTML/page HTML.html"><button><img class="accnavimg" src="../Images/Logo_HTML.jpg"></button></a></li>   
+            <li><a href="../HTML/page_CSS.HTML"><button><img class="accnavimg" src="../Images/Logo_CSS.jpg"></button></a></li>   
             <li><a href="../HTML/page Java Script.html"><button><img class="accnavimg" src="../Images/Logo_JS.png"></button></a></li>   
-            <li><a href="../HTML/"><button><img class="accnavimg" src="../Images/Logo_API.jpg"></button></a></li>   
-            <li><a href="../HTML/page Contact.html"><button><img class="accnavimg" src="../Images/10.jpg"></button></a></li>  
+            <li><a href="../HTML/page API.html"><button><img class="accnavimg" src="../Images/Logo_API.jpg"></button></a></li>   
+            
            
         </ul>
     </nav>
@@ -54,4 +55,5 @@
 </div>
 
 </body>
+<footer><a class="footertext" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/">Mention Legales</a></footer>
 </html>
