--- a/HTML/page_CSS.HTML
+++ b/HTML/page_CSS.HTML
@@ -89,6 +89,7 @@ Au début d'internet, l'auteur ne pouvait pas déterminer les couleurs et les po
 
 
 </body>
+<footer><a class="footertext" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/">Mention Legales</a></footer>
 </html>
 
 
