--- a/HTML/page_CSS.HTML
+++ b/HTML/page_CSS.HTML
@@ -31,7 +31,7 @@
     <div id="CSSLogo">
     <img id="LogoCSS" src="../Images/Logo_CSS.jpg" alt="Logo CSS">
 </div>
-    <p id="banner">Qu'est-ce-que ?</p>  
+    <p id="banner">Qu'est-ce-que CSS ?</p>  
 
     </br>
     <p id="banner2">
